components/minio/tenant-6.0.4/tenant/tenants/acm-observability/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    v1.min.io/tenant: minio-acm-observability
  name: minio
  namespace: open-cluster-management-observability
spec:
  host: minio-acm-observability.apps.sno.shanehomelab.com
  port:
    targetPort: http-minio
  to:
    kind: Service
    name: minio
    weight: 100
  wildcardPolicy: None
